array.island.Island.scala.error
Compilation error:
Island:11: error: not found: value niveau
  return niveau
         ^